# Lampshade

./: .gitignore  CMakeLists.txt  README.md  run.py  sdkconfig
components/http/: CMakeLists.txt  httpconfig.h  lampshadeserver.cpp  lampshadeserver.h  managerserver.cpp  managerserver.h  serverfactory.cpp  serverfactory.h
components/http/css/: app.css  app.min.css
components/http/html/: brightness.html  brightness.min.html  lampshade.html  lampshade.min.html  manager.html  manager.min.html
components/http/interface/: httpserver.h
components/http/js/: app.js  app.min.js  brightness.js  lampshade.js  lampshade.min.js  manager.js  manager.min.js
components/led/: CMakeLists.txt  led.h  ledcontrol.h  ledesp32.cpp  ledesp32.h
components/led/interface/: led.h
components/storage/: CMakeLists.txt  storage.cpp  storage.h  wifistorage.cpp  wifistorage.h
components/wifi/: CMakeLists.txt  wifi.h  wifiap.cpp  wifiap.h  wificonfig.h  wififactory.cpp  wififactory.h  wifista.cpp  wifista.h
components/wifi/interface/: wifi.h
main/: CMakeLists.txt  main.cpp  main.h
